[package]
name = "world_of_yarr"
authors = ["nurMatthias"]
version = "0.1.0"
edition = "2021"


[dependencies]
rltk = { version = "0.8.1", features = ["serde"] }
specs = { version = "0.18.0", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
